client/src/components/UserReviews/styles.scss
@import '../../variables';

.user-review-wrapper {
  grid-area: body-review;
  width: 60%;
  margin: 1rem auto;
  
  .user-review {
    background: blue;
    border-radius: 10px;
    padding: 10px 20px;

    &:not(:nth-child(1)) {
      margin-top: .5rem;
    }

    p {
      font-family: $link-font;

      &:nth-child(1) {
        font-size: 18px;
        letter-spacing: .2px;
      }

      &:nth-child(2) {
        margin-top: .5rem;
        text-align: right;
        font-size: 20px;
        font-style: italic;
      }
    }
  }
}

